<resources>
    <string name="app_name">КиноЕнот</string>
    <string name="Dogma_text">
        Два падших ангела Локи и Бартлби, обречённые вечно торчать в штате Висконсин,
        узнают, что у них есть шанс вернуться в рай.
        Для этого нужно всего лишь воспользоваться католической догмой,
        провозглашенной кардиналом-новатором: каждый прошедший через освященную арку в соборе в Нью-Джерси
        получает отпущение грехов.
    </string>
    <string name="MNB_text">

    Последний фильм из лирического триптиха Алексея Балабанова.
    Трое друзей стоят на пороге шикарного дома в центре большого города.
    Они молоды, полны сил и энергии, у них есть талант, сноровка, жажда жизни и...
    - в общем, у них есть все, кроме одного. Кроме денег.
    Впрочем, за этим они сюда и пришли - предложить услуги дизайнера хозяйке дома.
    Натэлла Антоновна тоже молода, но, кажется, жизнь ей уже успела наскучить.
    </string>

    <string name="Pl_text">

       Дэвид Вагнер - дитя девяностых.
        Но он увлечен телевизионным шоу «Плезантвиль», где действие происходит в 50-е годы
        в небольшом одноименном городке, где все шикарны, веселы и непорочны,
        и жизнь удивительно приятна.
    </string>


    <string name="Coven_text">

       В третьем сезоне Американской истории ужасов речь идет о шабаше ведьм,
        замаскированном под элитный пансион для «одаренных» девушек,
        который пытается защитить последних представительниц этого вида от вымирания.
    </string>

    <string name="St_text">

       Эта эскадрилья стала «поющей» - так капитан Титаренко подбирал себе новичков.
        Его «старикам» было не больше двадцати, но «желторотиков»,
        пополнение из летных училищ ускоренного выпуска, в бой все равно,
        по возможности, не пускали.
        Им еще многое предстояло испытать - и жар боев, и радость первой победы над врагом,
        и величие братства, скрепленного кровью, и первую любовь, и горечь утраты...
        И настанет день, когда по команде «в бой идут одни старики»
        бывшие желторотики бросятся к своим самолетам.
    </string>

    <string name="TS_text">

       Представьте себе, что вы вдруг начинаете понимать, что все вокруг вас — декорации,
        а люди — актеры, притворяющиеся теми, кем они вам кажутся.
        Весь ваш мир оказывается большим телесериалом, где вы исполняете главную роль,
        даже не подозревая об этом. Вся ваша жизнь — результат работы автора телешоу,
        которое вот уже тридцать лет смотрит вся планета, начиная с момента вашего рождения.
    </string>

    <string name="dogma">Догма</string>
    <string name="mne_ne_bolno">Мне не больно</string>
    <string name="coven">Ковен</string>
    <string name="plesantville">Плезантвиль</string>
    <string name="stariki">В бой идут одни старики</string>
    <string name="truman">Шоу Трумана</string>
    <string name="button_show_favorites">Показать избранное</string>
    <string name="exit_dialog_title">Подтверждение выхода</string>
    <string name="exit_dialog_message">Вы уверены, что хотите выйти? </string>
    <string name="button_yes">ДА</string>
    <string name="button_no">НЕТ</string>
    <string name="button_add_movie">Добавить</string>
    <string name="result_pattern">Результат %1s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>